--- a/src/WebComponents/SelectReferenceDialog/select-reference-dialog.scss
+++ b/src/WebComponents/SelectReferenceDialog/select-reference-dialog.scss
@@ -39,6 +39,6 @@
 :host-context(vi-app[is-desktop]) {
     main vi-query-grid {
         min-height: 60vh;
-        width: 90vw;
+        width: 75vw;
     }
 }
